Closed Bug 588339 Opened 15 years ago Closed 15 years ago

"Assertion failure: hasFunction()," with sharps

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
critical

Tracking

()

VERIFIED FIXED
Tracking Status
blocking2.0 --- final+

People

(Reporter: gkw, Assigned: bhackett1024)

References

Details

(Keywords: assertion, regression, testcase, Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

(#3={}) eval("#1={}") asserts TM changeset 27a70c60b48d without -j at Assertion failure: hasFunction(), at ../../jsinterp.h:378 (pass in as a CLI argument)
Program received signal EXC_BAD_ACCESS, Could not access memory. Reason: KERN_PROTECTION_FAILURE at address: 0x00000000 0x00158d3d in JS_Assert (s=0x20e494 "hasFunction()", file=0x20e3b6 "../../jsinterp.h", ln=378) at ../jsutil.cpp:80 80 *((int *) NULL) = 0; /* To continue from here in GDB: "return" then "continue". */ (gdb) bt #0 0x00158d3d in JS_Assert (s=0x20e494 "hasFunction()", file=0x20e3b6 "../../jsinterp.h", ln=378) at ../jsutil.cpp:80 #1 0x0000eab7 in JSStackFrame::getFunction (this=0x10000a0) at jsinterp.h:378 #2 0x000ba259 in js::Execute (cx=0x809400, chain=0x702000, script=0x50c7d0, down=0x10000a0, flags=16, result=0x1000100) at jsinterp.cpp:808 #3 0x000db0f2 in obj_eval (cx=0x809400, argc=1, vp=0x1000100) at ../jsobj.cpp:1231 #4 0x000a71aa in js::Interpret (cx=0x809400) at ../jsinterp.cpp:4706 #5 0x000ba6e5 in js::Execute (cx=0x809400, chain=0x702000, script=0x50c1c0, down=0x0, flags=0, result=0x0) at jsinterp.cpp:891 #6 0x0001666b in JS_ExecuteScript (cx=0x809400, obj=0x702000, script=0x50c1c0, rval=0x0) at ../jsapi.cpp:4754 #7 0x0000bb59 in Process (cx=0x809400, obj=0x702000, filename=0xbffff954 "hasFunct.js", forceTTY=0) at ../../shell/js.cpp:440 #8 0x0000c89d in ProcessArgs (cx=0x809400, obj=0x702000, argv=0xbffff83c, argc=1) at ../../shell/js.cpp:854 #9 0x0000c9b6 in shell (cx=0x809400, argc=1, argv=0xbffff83c, envp=0xbffff844) at ../../shell/js.cpp:5041 #10 0x0000cada in main (argc=1, argv=0xbffff83c, envp=0xbffff844) at ../../shell/js.cpp:5128
autoBisect shows this is probably related to the following changeset: The first bad revision is: changeset: 49714:13e72485d286 user: Brian Hackett date: Sun Aug 15 08:44:51 2010 -0400 summary: Add interface for JSStackFrame.fun/script/thisv/rval, bug 586533. r=lw
Blocks: 586533
blocking2.0: --- → ?
Attached patch fixSplinter Review
Assignee: general → bhackett1024
Attachment #467016 - Flags: review?(lw)
Comment on attachment 467016 [details] [diff] [review] fix Steal! /be
Attachment #467016 - Flags: review?(lw) → review+
Whiteboard: fixed-in-tracemonkey
blocking2.0: ? → final+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
A testcase for this bug was automatically identified at js/src/tests/js1_8_5/regress/regress-588339.js.
Flags: in-testsuite+
Testcases have been landed by virtue of being marked in-testsuite+ -> VERIFIED as well.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: