Assert fix, bug 588339. r=brendan